
* Recovered hiding of consts, which was accidentally broken in
Isabelle2007.  Potential INCOMPATIBILITY, ``hide const c'' really
makes c inaccessible; consider using ``hide (open) const c'' instead.

* Command 'instance': attached definitions now longer accepted.
INCOMPATIBILITY, use proper 'instantiation' target.

* Keyword 'code_exception' now named 'code_abort'.  INCOMPATIBILITY.


*** HOL ***

* Methods "case_tac" and "induct_tac" now refer to the very same rule
declarations as the structured Isar versions "cases" and "induct", cf.
the corresponding "cases" and "induct" attributes.  INCOMPATIBILITY,
in rare situations a different rule is selected --- notably nested
tuple elimination instead of former prod.exhaust: use explicit
(case_tac t rule: prod.exhaust) here.  Old-style rules for mutual and
nested datatypes also need to be given explicitly.

* Attributes "cases", "induct", "coinduct" support "del" option.

* Removed fact "case_split_thm", which duplicates "case_split".

* Command 'rep_datatype': instead of theorem names the command now
takes a list of terms denoting the constructors of the type to be
represented as datatype.  The characteristic theorems have to be
proven.  INCOMPATIBILITY.  Also observe that the following theorems
have disappeared in favour of existing ones:

    unit_induct                 ~> unit.induct
    prod_induct                 ~> prod.induct
    sum_induct                  ~> sum.induct
    Suc_Suc_eq                  ~> nat.inject
    Suc_not_Zero Zero_not_Suc   ~> nat.distinct

* 'Least' operator now restricted to class 'order' (and subclasses).
INCOMPATIBILITY.

* Library/Nat_Infinity: added addition, numeral syntax and more
instantiations for algebraic structures.  Removed some duplicate
theorems.  Changes in simp rules.  INCOMPATIBILITY.



New in Isabelle2008 (June 2008)
-------------------------------

*** General ***

* The Isabelle/Isar Reference Manual (isar-ref) has been reorganized